--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,12 @@ body {
   max-width: 800px;
   margin: 0 auto;
   padding: 20px;
-  background-color: #fff;
+  background-color: #eee;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.category-container{
+  margin: 25px 0;
 }
 
 h1 {
